fixed some layout issues and stylized some aspects

--- a/css/style.css
+++ b/css/style.css
@@ -57,24 +57,33 @@ header {
 .p3r img{
    float: right;
    width: 50%;
+   margin-bottom: 30px;
+   margin-left: 25px;
 }
 .p3l p{
-
+   margin-top: 0;
    width: 50%;
 }
 .p4 {
    margin-left: 30px;
 }
-.p4r img{
+.p4l img{
    float: left;
-   width: 50%;
+   width: 30%;
+   margin-bottom: 30px;
+   margin-right: 5px
 }
-.p4l p{
-
-   width: 50%;
+.p4r p{
+   float: right;
+   width: 68%;
+}
+.p4r-1 {
+   margin-top: 0;
+   margin-bottom: 10px;
 }
 .rightbox {
    margin-left: 20px;
+   margin-top: 60px;
    width: 250px;
 }
 .rightbox hr{
@@ -120,6 +129,10 @@ footer {
    margin-right: 35px;
 
 }
+footer div {
+   margin-left: auto;
+   margin-right: auto;
+}
 footer hr {
    width: 100%;
 }
@@ -146,4 +159,7 @@ footer hr {
 h2 {
    font-size: 38px;
    margin-bottom: 0px;
+}
+h3 {
+   font-size:25px
 }
